--- a/packages/server-graphql/package.json
+++ b/packages/server-graphql/package.json
@@ -11,13 +11,16 @@
   "exports": {
     ".": "./src/index.js",
     "./scalars": "./src/scalars/index.js",
-    "./utils": "./src/utils.js"
+    "./utils": "./src/utils.js",
+    "./remote": "./src/remote.js"
   },
   "engines": {
     "node": ">=14"
   },
   "dependencies": {
-    "graphql": "^15.2.0",
-    "lodash": "^4.17.15"
+    "graphql": "^14.2.1",
+    "graphql-tools": "^6.0.12",
+    "lodash": "^4.17.15",
+    "node-fetch": "^2.6.0"
   }
 }
