--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,32 +1,21 @@
 {
-  "env": {
-    "es2020": true,
-    "node": true
-  },
-  "extends": "eslint:recommended",
+  "parser": "@typescript-eslint/parser",
+  "extends": ["plugin:@typescript-eslint/recommended"],
   "parserOptions": {
-    "ecmaVersion": 11,
+    "ecmaVersion": 2018,
     "sourceType": "module"
   },
   "rules": {
-    "indent": [
-      "error",
-      2,
+    "semi": ["error", "always"],
+    "quotes": ["error", "double"],
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/no-explicit-any": 1,
+    "@typescript-eslint/no-inferrable-types": [
+      "warn",
       {
-        "MemberExpression": 1
+        "ignoreParameters": true
       }
     ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "double"
-    ],
-    "semi": [
-      "error",
-      "always"
-    ]
+    "@typescript-eslint/no-unused-vars": "warn"
   }
 }
