--- a/packages/server-graphql/package.json
+++ b/packages/server-graphql/package.json
@@ -34,6 +34,7 @@
     "apollo-server": "^2.16.1",
     "concurrently": "^5.3.0",
     "eslint": "^7.6.0",
+    "graphql": "^15.3.0",
     "jsdoc": "^3.6.4",
     "knex": "^0.21.4",
     "nodemon": "^2.0.4",
