--- a/packages/server-schema/package.json
+++ b/packages/server-schema/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@armix/server-graphql",
+  "name": "@armix/server-schema",
   "version": "0.0.1",
   "author": "Peter Boyer <@ptboyer>",
-  "description": "Functions to help with graphql/knex backend projects.",
+  "description": "Generate TypeDefs, Resolvers, and Tables for your GraphQL/Knex backends.",
   "repository": "https://github.com/armix-io/armix-server",
   "license": "MIT",
   "type": "module",
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "build": "yarn build:ts",
-    "build:ts": "tsc",
-    "watch:ts": "tsc -w",
+    "build:ts": "tsc --skipLibCheck",
+    "watch:ts": "yarn build:ts -w",
     "watch:yalc": "yalc push && nodemon --watch lib --exec \"yalc push --changed\"",
     "develop": "concurrently -k -p \"[{name}]\" -n \"ts,yalc\" -c \"cyan.bold,magenta.bold\" \"yarn watch:ts\" \"yarn watch:yalc\"",
     "docs": "jsdoc src/*.js -d ./docs/",
@@ -23,20 +23,16 @@
   "dependencies": {
     "lodash": "^4.17.15"
   },
-  "peerDependencies": {
-    "graphql": "^14.2.1",
-    "graphql-tools": "^6.0.12"
-  },
   "devDependencies": {
     "@types/lodash": "^4.14.159",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
-    "apollo-server": "^2.16.1",
+    "apollo-server": "^2.17.0",
     "concurrently": "^5.3.0",
     "eslint": "^7.6.0",
-    "graphql": "^15.3.0",
+    "graphql": "^14.0.0",
     "jsdoc": "^3.6.4",
-    "knex": "^0.21.4",
+    "knex": "^0.21.5",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
