--- a/packages/server-schema/package.json
+++ b/packages/server-schema/package.json
@@ -18,7 +18,8 @@
     "watch:yalc": "yalc push && nodemon --delay 2500ms --exec \"yalc push --changed\"",
     "dev": "concurrently -k -p \"[{name}]\" -n \"ts,yalc\" -c \"cyan.bold,magenta.bold\" \"yarn watch:ts\" \"yarn watch:yalc\"",
     "docs": "jsdoc src/*.js -d ./docs/",
-    "docs:open": "open ./docs/index.html"
+    "docs:open": "open ./docs/index.html",
+    "push": "../../publish.sh"
   },
   "dependencies": {
     "lodash": "^4.17.15"
