--- a/packages/server-schema/tsconfig.json
+++ b/packages/server-schema/tsconfig.json
@@ -4,6 +4,7 @@
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "Node",
+    "downlevelIteration": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "lib",
     "baseUrl": ".",
