--- a/packages/server-schema/package.json
+++ b/packages/server-schema/package.json
@@ -29,13 +29,16 @@
     "@types/tape": "^4.13.0",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
-    "apollo-server": "^2.17.0",
+    "apollo-server": "^2.19.0",
+    "apollo-server-testing": "^2.19.0",
     "concurrently": "^5.3.0",
     "eslint": "^7.6.0",
     "graphql": "^14.0.0",
     "jsdoc": "^3.6.4",
-    "knex": "^0.21.5",
+    "knex": "^0.21.12",
+    "knex-postgis": "^0.12.0",
     "nodemon": "^2.0.4",
+    "pg": "^8.4.2",
     "prettier": "^2.0.5",
     "tape": "^5.0.1",
     "ts-node": "^9.0.0",
