--- a/packages/server-schema/package.json
+++ b/packages/server-schema/package.json
@@ -22,7 +22,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "@types/lodash.omit": "^4.5.6",
+    "@types/lodash.pick": "^4.4.6",
+    "lodash": "^4.17.15",
+    "lodash.omit": "^4.5.0",
+    "lodash.pick": "^4.4.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
