--- a/packages/server-schema/tsconfig.json
+++ b/packages/server-schema/tsconfig.json
@@ -14,5 +14,6 @@
     "declaration": true,
     "declarationMap": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/*.test.ts"]
 }
