--- a/packages/server-schema/tsconfig.json
+++ b/packages/server-schema/tsconfig.json
@@ -3,13 +3,14 @@
   "compilerOptions": {
     "outDir": "lib",
 
-    "target": "ES2015",
-    "module": "commonjs",
+    "target": "ESNext",
+    "module": "ESNext",
 
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "Node",
 
     "declaration": true,
     "declarationMap": true
