--- a/packages/server-schema/package.json
+++ b/packages/server-schema/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "lodash.clonedeep": "^4.5.0",
-    "lodash.omit": "^4.5.0"
+    "lodash.omit": "^4.5.0",
+    "lodash.pick": "^4.4.0"
   },
   "peerDependencies": {
     "graphql": "*"
@@ -34,6 +35,7 @@
     "@types/jest": "^26.0.15",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.omit": "^4.5.6",
+    "@types/lodash.pick": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "apollo-server": "^2.19.0",
