--- a/packages/server-schema/package.json
+++ b/packages/server-schema/package.json
@@ -25,8 +25,8 @@
   },
   "dependencies": {
     "lodash.clonedeep": "^4.5.0",
-    "lodash.identity": "^3.0.0",
-    "lodash.omit": "^4.5.0"
+    "lodash.omit": "^4.5.0",
+    "lodash.pick": "^4.4.0"
   },
   "peerDependencies": {
     "graphql": "*"
@@ -34,8 +34,8 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/lodash.identity": "^3.0.6",
     "@types/lodash.omit": "^4.5.6",
+    "@types/lodash.pick": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "apollo-server": "^2.19.0",
@@ -47,7 +47,7 @@
     "knex": "^0.21.12",
     "nodemon": "^2.0.4",
     "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.0.2"
   }
 }
