--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "apollo-server": "^2.19.0",
+    "apollo-server-plugin-base": "^0.10.4",
     "apollo-server-testing": "^2.19.0",
     "concurrently": "^5.3.0",
     "eslint": "^7.6.0",
