--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "@armix/autograph",
   "version": "0.2.0",
   "author": "Peter Boyer <@ptboyer>",
-  "description": "Generate CRUD TypeDefs and Resolvers for GraphQL APIs.",
-  "repository": "https://github.com/armix-io/autograph",
-  "license": "MIT",
+  "repository": "git@github.com:armix-io/autograph.git",
+  "license": "Apache-2.0",
   "type": "module",
   "main": "index.js",
   "types": "index.d.ts",
