--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
   "name": "@armix/autograph",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "author": "Peter Boyer <@ptboyer>",
   "repository": "git@github.com:armix-io/autograph.git",
   "license": "Apache-2.0",
-  "type": "module",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "exports": {
+    ".": "./index.js",
+    "./express": "./express/index.js"
+  },
   "scripts": {
-    "clean": "rm -rf ./dist",
-    "build": "yarn clean && yarn build-ts && yarn build-package",
-    "build-ts": "tsc",
-    "build-package": "mkdir -p ./dist && cp package.json README.md ./dist",
-    "watch-ts": "yarn build-ts -w",
-    "watch-yalc": "yarn build-package && nodemon --delay 500ms --exec \"yarn dev-push\"",
-    "dev": "concurrently -k -p \"[{name}]\" -n \"ts,yalc\" -c \"cyan.bold,magenta.bold\" \"yarn watch-ts\" \"yarn watch-yalc\"",
-    "dev-push": "cd ./dist && yalc push --replace",
-    "release": "./deploy.sh",
+    "dev": "yarn dev:yalc",
+    "dev:init": "yarn yalc:init",
+    "dev:yalc": "yarn yalc:watch",
+    "yalc:init": "yalc publish",
+    "yalc:push": "cd dist && yalc push",
+    "yalc:watch": "concurrently yarn:watch:*",
+    "build": "yarn build:source && yarn build:package",
+    "build:source": "tsc",
+    "build:package": "cp package.json dist/package.json",
+    "watch:source": "tsc -w",
+    "watch:package": "onchange -ik 'package.json' -- yarn build:package",
+    "watch:yalc": "onchange -ik 'dist/**/*' -- yarn yalc:push",
+    "deploy": "./deploy.sh",
     "test": "jest"
   },
   "dependencies": {
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.omit": "^4.5.0",
-    "lodash.pick": "^4.4.0"
+    "common-tags": "^1.8.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0"
   },
   "peerDependencies": {
     "graphql": "*"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.1",
+    "@types/common-tags": "^1.8.1",
     "@types/jest": "^26.0.15",
-    "@types/lodash.clonedeep": "^4.5.6",
-    "@types/lodash.omit": "^4.5.6",
-    "@types/lodash.pick": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
     "apollo-server": "^2.19.0",
-    "apollo-server-plugin-base": "^0.10.4",
-    "apollo-server-testing": "^2.19.0",
     "concurrently": "^5.3.0",
     "eslint": "^7.6.0",
-    "graphql": "^14.0.0",
+    "graphql": "^15.5.1",
     "jest": "^26.6.3",
-    "knex": "^0.21.12",
-    "nodemon": "^2.0.4",
+    "onchange": "^7.1.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.0.2"
