--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,8 @@
 {
+  "extends": "@tsconfig/node16/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-
-    "target": "esnext",
-    "module": "esnext",
-
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
-
-    "declaration": true,
-    "declarationMap": true
+    "declaration": true
   },
   "include": ["src"],
   "exclude": ["**/*.test.ts"]
