--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,10 @@
   "rules": {
     "semi": ["error", "always"],
     "quotes": ["error", "double"],
+    "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/no-unused-vars": "warn",
