feat: add hook meta context object

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,9 @@
   "rules": {
     "semi": ["error", "always"],
     "quotes": ["error", "double"],
+    "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-inferrable-types": [
       "warn",
